kubernetes/traefik/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-basic
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-auth  # You'll need to create this secret with htpasswd
